--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap");
 
-.app {
-    min-height: 100vh;
-    display: flex;
-    color: black;
+.App {
+  min-height: 100vh;
+  display: flex;
+  background-image: url("./background.png");
+  background-size: cover;
+  background-position: center;
+  color: black;
 }
